# rules_angular

./: .bazelrc  .gitignore  .pnpmfile.cjs  .prettierrc  BUILD.bazel  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  repo_fetch.bzl  repo_init.bzl
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
architect/: ng_application.bzl  ng_config.bzl  ng_library.bzl  ng_test.bzl  utils.bzl
ng_package/: BUILD.bazel  angular_package_format.bzl  index.bzl
ng_package/bundle_types/: BUILD.bazel  index.bzl
ng_package/packager/: BUILD.bazel  index.ts
ng_package/rollup/: BUILD.bazel  rollup.config.js
ng_project/: index.bzl
ng_project/config/: BUILD.bazel  compilation_mode.bzl  config.bzl  index.bzl
patches/: @angular__compiler-cli.patch
setup/: BUILD.bazel  bzl_library.bzl  step_1.bzl  step_2.bzl  step_3.bzl
src/architect/: BUILD.bazel  ng_application.bzl  ng_config.bzl  ng_library.bzl  ng_test.bzl  utils.bzl
src/ng_examples_db/: BUILD.bazel  index.bzl
src/ng_package/: angular_package_format.bzl  index.bzl
src/ng_package/packager/: index.ts
src/ng_package/rollup/: BUILD.bazel  rollup.config.js
src/ng_package/text_replace/: BUILD.bazel  index.bzl  index.mts  index.ts
src/ng_project/: index.bzl
src/ng_project/config/: BUILD.bazel  config.bzl  index.bzl
src/optimization/: BUILD.bazel  index.bzl  optimize.sh
src/optimization/boilerplate/: BUILD.bazel  generate.sh
src/private/: symlink_package.bzl
src/ts_project/: index.bzl
src/worker/: BUILD.bazel  compiler_host_base.mts  compiler_host_cached.mts  file_system.mts  index.mts  loop.mts  program_cache.mts  worker.mts  worker_mode.bzl
src/worker/angular/: BUILD.bazel  main_angular.mts
src/worker/file_cache/: file_cache.mts
src/worker/program_abstractions/: ngtsc.mts  program_descriptor.mts  vanilla_ts.mts
strict_deps/: BUILD.bazel  index.bzl  index.mts  visitor.mts
test/app/: BUILD.bazel  index.ts
test/app/plain_ts/: BUILD.bazel  index.ts  tsconfig.json
test/ng_project/: BUILD.bazel  base.component.html  base.component.ts  tsconfig.json
test/optimize/: BUILD.bazel
test/strict_deps/: BUILD.bazel  import_from_sibling.ts  import_node_module.ts  import_npm_module.ts  sibling.ts  sibling_import_from_depth.ts
test/strict_deps/depth/: BUILD.bazel
test/strict_deps/import_npm_module/: BUILD.bazel  index.ts
test/tsconfig_override/: BUILD.bazel
worker/: BUILD.bazel  bazel_safe_filesystem.mts  cache_compiler_host.mts  compiler_host_cached.mts  constants.mts  execroot.mts  file_system.mts  index.mts  loop.mts  modified_resources.mts  params_arg_file.mts  program_cache.mts  rollup.config.mjs  tsconfig.json
worker/cache/: file_cache.mts
worker/file_cache/: file_cache.mts
worker/program_abstractions/: ngtsc.mts  program_descriptor.mts  vanilla_ts.mts
