module(
    name = "rules_angular",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "aspect_rules_js", version = "2.3.3")
bazel_dep(name = "aspect_rules_ts", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "jq.bzl", version = "0.1.0")
