module(
    name = "rules_angular",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "aspect_rules_js", version = "2.3.3")
bazel_dep(name = "aspect_rules_ts", version = "3.6.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "jq.bzl", version = "0.1.0")
bazel_dep(name = "rules_nodejs", version = "6.4.0")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps(
    #ts_version_from = "//:package.json",
    # TODO: Support in https://github.com/aspect-build/rules_ts/blob/main/ts/private/npm_repositories.bzl
    ts_version = "5.6.2",
)

use_repo(rules_ts_ext, "npm_typescript")
