load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "lib",
    srcs = glob(["*.mts"]),
    supports_workers = 1,
    tsc_worker = "//worker:worker_angular",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/typescript",
    ],
)

js_binary(
    name = "bin",
    data = [":lib"],
    entry_point = ":index.mjs",
    visibility = ["//visibility:public"],
)
