load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

copy_file(
    name = "copy_worker_js",
    src = "@aspect_rules_js//js/private/worker:worker.js",
    out = "protocol/worker.cjs",
)

ts_project(
    name = "worker",
    srcs = glob([
        "**/*.mts",
        "**/*.cts",
    ]),
    declaration = True,
    data = [":copy_worker_js"],
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@angular/compiler-cli",
        "//:node_modules/@types/node",
        "//:node_modules/memfs",
        "//:node_modules/typescript",
    ],
)
