load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project", "ts_config")

ts_project(
    name = "lib",
    srcs = [
        "index.ts",
    ],
    tsconfig = "//ng_package:tsconfig",
    deps = [
        "//:node_modules/@bazel/worker",
        "//:node_modules/@microsoft/api-extractor",
        "//:node_modules/@types/node",
    ],
)

js_binary(
    name = "bin",
    data = [":lib"],
    entry_point = ":index.js",
    visibility = ["//visibility:public"],
)
