load("//setup:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    deps = [
        "@aspect_rules_js//js:defs",
    ],
)

bzl_library(
    name = "ng_application",
    srcs = ["ng_application.bzl"],
    deps = [
        ":utils",
        "@aspect_rules_js//js:defs",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "ng_library",
    srcs = ["ng_library.bzl"],
    deps = [
        ":utils",
        "@aspect_rules_js//js:defs",
        "@jq.bzl//jq",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "ng_test",
    srcs = ["ng_test.bzl"],
    deps = [
        ":utils",
        "@aspect_rules_js//js:defs",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "ng_config",
    srcs = ["ng_config.bzl"],
    deps = ["@jq.bzl//jq"],
)
