load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//src/private:symlink_package.bzl", "symlink_package")

package(default_visibility = ["//visibility:public"])

symlink_package(
    name = "node_modules/@angular/compiler-cli",
    src = "@rules_angular_configurable_deps//:angular_compiler_cli",
)

symlink_package(
    name = "node_modules/typescript",
    src = "@rules_angular_configurable_deps//:typescript",
)

copy_file(
    name = "copy_worker_js",
    src = "@aspect_rules_js//js/private/worker:worker.js",
    out = "protocol/worker.cjs",
)

ts_project(
    name = "worker_lib",
    srcs = glob([
        "**/*.mts",
        "**/*.cts",
    ]),
    data = [":copy_worker_js"],
    declaration = True,
    tsconfig = "tsconfig.json",
    deps = [
        ":node_modules/@angular/compiler-cli",
        ":node_modules/typescript",
        "//:node_modules/@types/node",
        "//:node_modules/json-stable-stringify",
        "//:node_modules/lru-cache",
        "//:node_modules/memfs",
    ],
)

js_binary(
    name = "worker_angular",
    data = [":worker_lib"],
    entry_point = ":index.mjs",
)

js_binary(
    name = "worker_vanilla_ts",
    data = [":worker_lib"],
    entry_point = ":index.mjs",
    fixed_args = ["--vanilla-ts"],
)
