load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//strict_deps:index.bzl", "strict_deps_test", "invalid_strict_deps_test")


ts_project(
    name = "sibling",
    srcs = ["sibling.ts"],
)

ts_project(
    name = "depth",
    srcs = ["depth/file.ts"],
)

strict_deps_test(
    name = "import_npm_module",
    srcs = ["import_npm_module.ts"],
    deps = ["//:node_modules/@angular/core"],
)

invalid_strict_deps_test(
    name = "invalid_import_npm_module",
    srcs = ["import_npm_module.ts"],
)

strict_deps_test(
    name = "import_from_sibling",
    srcs = ["import_from_sibling.ts"],
    deps = [":sibling"],
)

invalid_strict_deps_test(
    name = "invalid_import_from_sibling",
    srcs = ["import_from_sibling.ts"],
)


strict_deps_test(
    name = "import_from_depth",
    srcs = ["import_from_depth.ts"],
    deps = [":depth"],
)

invalid_strict_deps_test(
    name = "invalid_import_from_depth",
    srcs = ["import_from_depth.ts"],
)

