load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//src/worker:worker_mode.bzl", "transition_worker_lib")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "angular_lib",
    srcs = glob([
        "**/*.mts",
    ]),
    declaration = True,
    tsconfig = "//src/worker:tsconfig",
    deps = [
        "//src/worker:node_modules/@angular/compiler-cli",  # user-provided Angular compiler.
        "//src/worker:worker_lib",
    ],
)

transition_worker_lib(
    name = "worker_lib_transitioned",
    lib = ":angular_lib",
)

js_binary(
    name = "bin",
    data = [":worker_lib_transitioned"],
    entry_point = ":main_angular.mjs",
)
