load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "angular_lib",
    srcs = glob([
        "**/*.mts",
    ]),
    declaration = True,
    tsconfig = "//src/worker:tsconfig",
    deps = [
        "//src/worker:node_modules/@angular/compiler-cli",  # user-provided Angular compiler.
        "//src/worker:worker_lib_with_user_compiler",
    ],
)

js_binary(
    name = "bin",
    data = [":angular_lib"],
    entry_point = ":main_angular.mjs",
    env = {
        # NOTE: We disable node FS patches here because symlinks created
        # by `ctx.actions.symlink` with `target_file` end up resolving outside
        # of runtime `.runfiles` directories into the sandbox execroot. The FS
        # patches would block this jump from one root to the other root, but that's
        # exactly what we need here so that transitive dependencies of e.g. `@angular/compiler-cli`
        # are resolved based on the configured compiler package.
        "JS_BINARY__PATCH_NODE_FS": "0",
    },
)
