load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "plain_ts",
    srcs = glob(["**/*.ts"]),
    supports_workers = 1,
    tsc_worker = "//src/worker:worker_vanilla_ts",
    tsconfig = "tsconfig.json",
    deps = [
        "//test/app",
        "//:node_modules/@angular/core",
    ],
)
